# vml_task

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  task.md
app/: config.py  models.py  store.py
app/api/: routes.py
app/pipeline/: cleaner.py  transformer.py
app/scraper/: client.py  headers.py  parser.py
app/worker/: celery_app.py  tasks.py
static/: index.html
